[gd_scene load_steps=10 format=3 uid="uid://ds2p76qsyb33l"]

[ext_resource type="Script" path="res://scenes/entities/objects/throwables/water/water_pool.gd" id="1_1jlhk"]
[ext_resource type="Texture2D" uid="uid://3cffibg3i4ns" path="res://assets/sprites/objects/throwables/water/Water-Sheet.png" id="2_4koa6"]
[ext_resource type="Texture2D" uid="uid://bocxbuatv3htb" path="res://assets/sprites/UI/Keycaps/Keycaps-D.png" id="3_ev4pj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rtusq"]
size = Vector2(4, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dns8"]
atlas = ExtResource("2_4koa6")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmv8w"]
atlas = ExtResource("2_4koa6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8iyoe"]
atlas = ExtResource("2_4koa6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_j2pcn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dns8")
}],
"loop": true,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmv8w")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8iyoe")
}],
"loop": true,
"name": &"pickup",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ymujq"]

[node name="waterPool" type="StaticBody2D"]
script = ExtResource("1_1jlhk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rtusq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j2pcn")
animation = &"idle"

[node name="ActionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionArea"]
shape = SubResource("RectangleShape2D_ymujq")

[node name="pickup" type="AudioStreamPlayer2D" parent="."]

[node name="ActionButton" type="Sprite2D" parent="."]
visible = false
position = Vector2(17, -30)
texture = ExtResource("3_ev4pj")

[connection signal="body_entered" from="ActionArea" to="." method="_on_action_area_body_entered"]
[connection signal="body_exited" from="ActionArea" to="." method="_on_action_area_body_exited"]
